<resources>
    <string name="app_name">JM Admin</string>
    <string name="username">Username</string>
    <string name="probelalkhan"><u><b><i>narasimprime</i></b></u></string>
    <string name="email">Email :</string>
    <string name="probelalkhan_gmail_com">narasimprime@gmail.com</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="logout">Logout</string>
    <string name="newproduct">New Product Form</string>
    <string name="service">Book Your Service</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="completed">Completed</string>
    <string name="progress">Progress</string>
    <string name="cancelled">Cancelled</string>
    <string name="status">Status</string>
    <string name="feed">Feedback</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="register"><u><b><i>Copyright</i></b></u></string>
    <string-array name="status_array">
        <item>PROGRESS</item>
    </string-array>
    <string-array name="status_arrayedit">
        <item>PROGRESS</item>
        <item>COMPLETED</item>
        <item>CANCELLED</item>
    </string-array>
    <string-array name="booking_type">
        <item>Maintenance</item>
        <item>Development</item>
    </string-array>
    <string-array name="feed_array">
        <item>EXCELLENT</item>
        <item>GOOD</item>
        <item>AVERAGE</item>
        <item>NOT BAD</item>
        <item>BAD</item>
    </string-array>
</resources>
